--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
     "dayjs": "^1.11.1",
     "expo": "~44.0.2",
@@ -17,7 +18,7 @@
     "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "^0.64.2",
+    "react-native": "^0.64.3",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.0",
     "react-native-web": "0.17.1"
