--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "^0.64.3",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
