--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "dayjs": "^1.11.1",
     "expo": "~44.0.2",
     "expo-splash-screen": "~0.14.1",
@@ -21,6 +23,8 @@
     "react-native": "^0.64.3",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1"
   },
