--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~44.0.2",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-dom": "17.0.1",
